--- a/index.html
+++ b/index.html
@@ -27,5 +27,16 @@
         <figcaption>HTMLについて</figcaption>
     </figure>
      <!-------------------------------->
+<br>
+<a href="https//www.yhoo.co.jp//">shounosuke</a>
+ <img src= "images/logo.png">
+
+ 
+ 
+ 
+
+
+
+
 
 </body>
