--- a/index.html
+++ b/index.html
@@ -28,15 +28,24 @@
     </figure>
      <!-------------------------------->
 <br>
-<a href="https//www.yhoo.co.jp//">shounosuke</a>
+<a href="https://www.yahoo.co.jp//">shounosuke</a>
  <img src= "images/logo.png">
 
+
  
- 
- 
+                          
+</body>22日のまとめ
+
+①GitHubの設定
+Windowsの人はGit Bashが必要になります
+まず初めにgit用のフォルダを作ります。できるだけわかりやすい名前にし、mygitというフォルダをホームディレクトリに作りましょう。立ち上げたターミナルorGitBashに下記のコマンドを入力するとフォルダが作成されます。mkdirはmake directory（ディレクトリ（フォルダ）を作る）の訳語デス。
+gitの初期設定は
+①git initをターミナル(orGitBash)に入力し、Enter
+②git config --global user.email "自分のメールアドレス"を入力し　Enter
+③git config --global user.name "自分の名前(アルファベット)"を入力しEnter
+で設定が出来ます。<div class=""></div>
 
 
 
 
 
-</body>
