--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8"/>
 
-  <title>doyolab研究ノート </title>
+  <title>doyolab </title>
     <!--main.cssというファイルにhtmlのスタイルの詳細を記入し、参照している-->
   <link rel="stylesheet" href="main.css">
 </head>
+<h1>ina lab</h1>
+
+
+<body background="https://drive.google.com/file/d/17yZwxFHd8QC6C602eNf0GZunFD-V7mDl/view?usp=sharing"><body>
+</body></body>
 
 
 <body>
