--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <!--main.cssというファイルにhtmlのスタイルの詳細を記入し、参照している-->
   <link rel="stylesheet" href="main.css">
 </head>
-<h1>ina lab</h1>
+<h1>　　　　　ina lab</h1>
+
+<h2>①プロジェクトについて</h2>
+
+　生活していくうえで何かに対して不便に感じることは少なくないと思います。
+筆記用具を忘れる、物をなくす、擁壁の雑草が上手く刈れないなどなど。<br>
+ 
+
+  <img src="images/thumbnail_image0 (6).jpg" width="75%"></img>
 
 
-<body background="https://drive.google.com/file/d/17yZwxFHd8QC6C602eNf0GZunFD-V7mDl/view?usp=sharing"><body>
-</body></body>
 
 
 <body>
@@ -39,16 +45,6 @@
 
  
                           
-</body>22日のまとめ
-
-①GitHubの設定
-Windowsの人はGit Bashが必要になります
-まず初めにgit用のフォルダを作ります。できるだけわかりやすい名前にし、mygitというフォルダをホームディレクトリに作りましょう。立ち上げたターミナルorGitBashに下記のコマンドを入力するとフォルダが作成されます。mkdirはmake directory（ディレクトリ（フォルダ）を作る）の訳語デス。
-gitの初期設定は
-①git initをターミナル(orGitBash)に入力し、Enter
-②git config --global user.email "自分のメールアドレス"を入力し　Enter
-③git config --global user.name "自分の名前(アルファベット)"を入力しEnter
-で設定が出来ます。<div class=""></div>
 
 
 
