--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
 </head>
 <h1>　　　　　ina lab</h1>
 
-<h2>①プロジェクトについて</h2>
+<h2> ①プロジェクトについて</h2>
 
 　生活していくうえで何かに対して不便に感じることは少なくないと思います。
-筆記用具を忘れる、物をなくす、擁壁の雑草が上手く刈れないなどなど。<br>
+筆記用具を忘れる、物をなくす、擁壁の雑草が上手く刈れないなどなど。<br><br>
  
 
-  <img src="images/thumbnail_image0 (6).jpg" width="75%"></img>
+  <img src="images/thumbnail_image0 (6).jpg" width="75%"></img><br>
+<br>
+
+
 
 
 
 
 <body>
+    <br>
+    <a href="untitled-2.html">更新Ⅰ　2021 04/14</a><br><br><br>
+    
     <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
         <img src="images/logo.png" alt="">
