--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 筆記用具を忘れる、物をなくす、擁壁の雑草が上手く刈れないなどなど。<br><br>
  
 
-  <img src="images/thumbnail_image0 (6).jpg" width="75%"></img><br>
+  <img src="images/thumbnail_image0 (6).jpg" width="50%"></img><br>
 <br>
-
+このプロジェクトでは身近な問題を解決したり、生活が楽しくなるようなアイテムを作っていきたいと思います。
+<br>
 
 
 
@@ -26,7 +27,7 @@
 <body>
     <br>
     <a href="untitled-2.html">更新Ⅰ　2021 04/14</a><br><br><br>
-    
+
     <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
         <img src="images/logo.png" alt="">
