--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <a href=Untitled-1.html>  更新Ⅱ　2021 04/23</a><br><br>
     <a href=Untitled-3.html>  更新Ⅲ 2021 04/30</a><br><br>
     <a href=Untitled-7.html>更新Ⅳ　2021 05/04</a><br><br>
-    <a href=Untitled-913.html>更新V 2021 05/20　草刈りアンケート</a>
+    <a href=Untitled-913.html>更新V 2021 05/20　草刈りアンケート</a><br><br>
+    <a href=Untitled-check.html>更新Ⅵ　2021 06/01</a>
 
    
 
