--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <a href=Untitled-3.html>  更新Ⅲ 2021 04/30</a><br><br>
     <a href=Untitled-7.html>更新Ⅳ　2021 05/04</a><br><br>
     <a href=Untitled-913.html>更新V 2021 05/20　草刈りアンケート</a><br><br>
-    <a href=Untitled-check.html>更新Ⅵ　2021 06/01</a>
-
-   
+    <a href=Untitled-check.html>更新Ⅵ　2021 06/01</a><br><br>
+   <a href="Untitled-321.html">更新　Ⅶ　2021 06/18</a>
 
     
 
