--- a/Untitled-321.html
+++ b/Untitled-321.html
@@ -7,7 +7,7 @@
 <h2><font size="4">質問　１　草刈りで1番大変だと思うことは</font></h2><br>
 <font size="3">
 ①腰が痛くなる<br><br>
-②運転して草を刈る草刈り機はシンプルに運転が大変で、手で持つ機会<br>
+②運転して草を刈る草刈り機はシンプルに運転が大変で、手で持つ機械<br>
 は、重たくて大変だった<br><br>
 ③草刈りした物を纏める時<br><br>
 ④草を抜くこと、しゃがむ体勢<br><br>
