--- a/Untitled-443.html
+++ b/Untitled-443.html
@@ -37,6 +37,8 @@
 ⑤午前6時から午後13時の間（1人）<br><br>
 ⑥朝（1人）<br><br>
 
+<h2><font size="4">草刈りの負担を減らす器具の作成</font><br>
+    
 <font size="3.5">
     夏休みではアンケート結果を取り入れた器具の作成をしていこうと思っています。アンケートは今後も継続して九月には実際に運用できるレベルまでアップデートできるようにします。<br>
 
