--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
    <a href="Untitled-6456.html">更新　Ⅺ　2021　9/23　３</a><br><br>
     
     <a href="https://www.slideshare.net/secret/C1kTXaDByK4fKx">プレゼンテーション　10/1</a>
-    </a>
+    </a><br><br>
+    <a href="https://www.slideshare.net/secret/dZTz6fM4M48xJ">プレゼンテーション2　10/15</a>
     
     <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
