--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     
     <a href="https://www.slideshare.net/secret/C1kTXaDByK4fKx">プレゼンテーション　10/1</a>
     </a><br><br>
-    <a href="https://www.slideshare.net/secret/2d6tTYLuoAxyFG">プレゼンテーション2　10/15</a>
-    
+    <a href="https://www.slideshare.net/secret/2d6tTYLuoAxyFG">プレゼンテーション2　10/15</a><br><br>
+    <a href="https://www.slideshare.net/secret/r0R31l37m4hNEi">プレゼンテーション3 11/12</a>
     <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
         <img src="images/logo.png" alt="">
