--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
    <a href="5555555.html">    更新　Ⅸ　2021 07/20 夏休み１<br><br>
    <a href="Untitled-888.html">更新　Ⅹ　2021 08/21　２<br><br>
    <a href="Untitled-6456.html">更新　Ⅺ　2021　9/23　３</a><br><br>
-    
+  
     <a href="https://www.slideshare.net/secret/C1kTXaDByK4fKx">プレゼンテーション　10/1</a>
     </a><br><br>
     <a href="https://www.slideshare.net/secret/2d6tTYLuoAxyFG">プレゼンテーション2　10/15</a><br><br>
-    <a href="https://www.slideshare.net/secret/r0R31l37m4hNEi">プレゼンテーション3 11/12</a>
-    <logo>
+    <a href="https://www.slideshare.net/secret/r0R31l37m4hNEi">プレゼンテーション3 11/12</a><br><br>
+    <a href="Untitled-348.html">更新　Ⅻ　2021 11/26　リンク機構</a>
+    <br> <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
         <img src="images/logo.png" alt="">
     </logo>
