--- a/Untitled-991.html
+++ b/Untitled-991.html
@@ -4,5 +4,5 @@
 <br>
 <h1><font size="3">十徳ナイフのように先端を取り換えできる草刈り器具製作第1弾ということでケースを作成してみた。
 <br>
-丸穴に各種先端を合わせて留め具をつけて先端を自由に回転させて好きなものに交換できるようにしようと思っている。
+先端の丸穴に各種先端を合わせて留め具をつけて先端を自由に回転させて好きなものに交換できるようにしようと思っている。
 </font></h1><br>
