--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
    <a href="5555555.html">    更新　Ⅸ　2021 07/20 夏休み１<br><br>
    <a href="Untitled-888.html">更新　Ⅹ　2021 08/21　２<br><br>
    <a href="Untitled-6456.html">更新　Ⅺ　2021　9/23　３</a><br><br>
+   　 <a href="Untitled-6342.html">更新　Ⅻ　2022　4/8　</a><br><br>
   
     <a href="https://www.slideshare.net/secret/C1kTXaDByK4fKx">プレゼンテーション　10/1</a>
     </a><br><br>
@@ -49,7 +50,9 @@
     <a href="Untitled-991.html">更新　Ⅺ　2021　12/10　10徳草刈り機ケース</a><br><br>
     <a href="Untitled-unikon7474.html">更新　Ⅻ　2021　12/24　10徳草刈り機　動作確認</a><br><br>
     <a href="https://www.slideshare.net/secret/2nNBWzlDf5P6CE">プレゼンテーション4 2022 1/21</a>
-    <br> <logo>
+    <br> 
+    <a href="Untitled-6342.html">更新　13　2022　4/8　</a><br><br>
+    <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
         <img src="images/logo.png" alt="">
     </logo>
